<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/silver">

    <TextView
        android:id="@+id/textViewUserName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="5dp"
        android:gravity="center"
        android:hint="@string/desired_stagename"
        android:textColor="@color/common_google_signin_btn_text_dark_focused"
        android:textSize="30sp"
        android:background="@drawable/rounded_edges"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/full_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:singleLine="true"
        android:layout_marginHorizontal="5dp"
        android:hint="@string/full_name"
        android:textColor="@color/common_google_signin_btn_text_dark_focused"
        android:textSize="30sp"
        android:background="@drawable/rounded_edges"
        app:layout_constraintTop_toBottomOf="@id/textViewUserName"/>

    <EditText
        android:id="@+id/email_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:singleLine="true"
        android:layout_marginHorizontal="5dp"
        android:hint="@string/email"
        android:textColor="@color/common_google_signin_btn_text_dark_focused"
        android:textSize="30sp"
        android:background="@drawable/rounded_edges"
        app:layout_constraintTop_toBottomOf="@id/full_name"/>

    <Button
        android:id="@+id/button_back"
        android:layout_width="300dp"
        android:layout_height="70dp"
        android:layout_marginTop="3dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/chat_sdk_login_button_selector"
        android:onClick="back_click"
        android:text="@string/back"
        android:textAllCaps="false"
        android:textColor="@color/common_google_signin_btn_text_dark_default"
        android:textSize="36sp"
        app:layout_constraintBottom_toTopOf="@id/button_submit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button_submit"
        android:layout_width="300dp"
        android:layout_height="70dp"
        android:layout_marginTop="3dp"
        android:layout_marginBottom="76dp"
        android:background="@drawable/chat_sdk_login_button_selector"
        android:onClick="submit_click"
        android:text="@string/submit_string"
        android:textAllCaps="false"
        android:textColor="@color/common_google_signin_btn_text_dark_default"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>